--- a/index.html
+++ b/index.html
@@ -574,14 +574,14 @@
                             <i class="fas fa-map-marker-alt text-gold fa-2x me-3"></i>
                             <div>
                                 <h5 class="fw-bold mb-1">Our Center</h5>
-                                <p class="text-muted">123 Seva Marg, Green Valley,<br>New Delhi, India - 110001</p>
+                                <p class="text-muted">Animal Seva Shelter, Iron Bridge,<br>Alappuzha, India - 688006</p>
                             </div>
                         </div>
                         <div class="d-flex mb-4">
                             <i class="fas fa-phone-alt text-gold fa-2x me-3"></i>
                             <div>
                                 <h5 class="fw-bold mb-1">Phone</h5>
-                                <p class="text-muted">+91 98765 43210 <br><small>(24/7 Helpline for Rescues)</small></p>
+                                <p class="text-muted">+91 81398 59887 <br><small>(24/7 Helpline for Rescues)</small></p>
                             </div>
                         </div>
                         <div class="d-flex mb-4">
@@ -721,8 +721,8 @@
                 <div class="col-lg-4 col-md-12">
                     <h5 class="footer-heading">Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-3 d-flex"><i class="fas fa-map-marker-alt text-gold mt-1 me-3"></i> <span class="opacity-75">123 Seva Marg, Green Valley,<br>New Delhi, India - 110001</span></li>
-                        <li class="mb-3 d-flex"><i class="fas fa-phone text-gold mt-1 me-3"></i> <span class="opacity-75">+91 98765 43210</span></li>
+                        <li class="mb-3 d-flex"><i class="fas fa-map-marker-alt text-gold mt-1 me-3"></i> <span class="opacity-75">Animal Seva Shelter, Iron Bridge,<br>Alappuzha, India - 688006</span></li>
+                        <li class="mb-3 d-flex"><i class="fas fa-phone text-gold mt-1 me-3"></i> <span class="opacity-75">+91 81398 59807</span></li>
                         <li class="mb-3 d-flex"><i class="fas fa-envelope text-gold mt-1 me-3"></i> <span class="opacity-75">help@animalseva.org</span></li>
                     </ul>
                 </div>
