--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                             <i class="fas fa-envelope text-gold fa-2x me-3"></i>
                             <div>
                                 <h5 class="fw-bold mb-1">Email</h5>
-                                <p class="text-muted">help@animalseva.org</p>
+                                <p class="text-muted">help@animalseva.in</p>
                             </div>
                         </div>
                         <div class="mt-5">
@@ -679,7 +679,7 @@
             <p>Animal Seva Foundation is a non-profit organization, and we rely on the generosity of our donors. As a general rule, donations once made cannot be refunded. However, we understand that errors can happen.</p>
             
             <h3>2. Duplicate Transactions</h3>
-            <p>If you have made a duplicate donation due to a technical glitch or error, please contact us immediately at <strong>help@animalseva.org</strong> with proof of the transaction. We will verify the claim and refund the duplicate amount within 7-10 working days.</p>
+            <p>If you have made a duplicate donation due to a technical glitch or error, please contact us immediately at <strong>help@animalseva.in</strong> with proof of the transaction. We will verify the claim and refund the duplicate amount within 7-10 working days.</p>
             
             <h3>3. Unauthorized Transactions</h3>
             <p>If you suspect that your card or account has been used to make a donation without your authorization, please contact your bank immediately. We will cooperate fully with the bank's investigation.</p>
@@ -723,7 +723,7 @@
                     <ul class="list-unstyled">
                         <li class="mb-3 d-flex"><i class="fas fa-map-marker-alt text-gold mt-1 me-3"></i> <span class="opacity-75">Animal Seva Shelter, Iron Bridge,<br>Alappuzha, India - 688006</span></li>
                         <li class="mb-3 d-flex"><i class="fas fa-phone text-gold mt-1 me-3"></i> <span class="opacity-75">+91 81398 59807</span></li>
-                        <li class="mb-3 d-flex"><i class="fas fa-envelope text-gold mt-1 me-3"></i> <span class="opacity-75">help@animalseva.org</span></li>
+                        <li class="mb-3 d-flex"><i class="fas fa-envelope text-gold mt-1 me-3"></i> <span class="opacity-75">help@animalseva.in</span></li>
                     </ul>
                 </div>
             </div>
