--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
         <!-- Trust/CTA -->
         <section class="py-5 bg-white">
-            <div class="container text-center">
+            <div style="display: none;" class="container text-center">
                 <h3 class="text-green fw-bold mb-4">Why Trust Animal Seva?</h3>
                 <div class="row justify-content-center">
                     <div class="col-md-8">
@@ -574,14 +574,14 @@
                             <i class="fas fa-map-marker-alt text-gold fa-2x me-3"></i>
                             <div>
                                 <h5 class="fw-bold mb-1">Our Center</h5>
-                                <p class="text-muted">Animal Seva Shelter, Iron Bridge,<br>Alappuzha, India - 688006</p>
+                                <p class="text-muted">Arun P, Animal Seva Shelter, Akambadam,<br>Nilambur, Malappuram, India - 679329</p>
                             </div>
                         </div>
                         <div class="d-flex mb-4">
                             <i class="fas fa-phone-alt text-gold fa-2x me-3"></i>
                             <div>
                                 <h5 class="fw-bold mb-1">Phone</h5>
-                                <p class="text-muted">+91 81398 59807 <br><small>(24/7 Helpline for Rescues)</small></p>
+                                <p class="text-muted">+91 8089478082 <br><small>(24/7 Helpline for Rescues)</small></p>
                             </div>
                         </div>
                         <div class="d-flex mb-4">
@@ -721,8 +721,8 @@
                 <div class="col-lg-4 col-md-12">
                     <h5 class="footer-heading">Contact Us</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-3 d-flex"><i class="fas fa-map-marker-alt text-gold mt-1 me-3"></i> <span class="opacity-75">Animal Seva Shelter, Iron Bridge,<br>Alappuzha, India - 688006</span></li>
-                        <li class="mb-3 d-flex"><i class="fas fa-phone text-gold mt-1 me-3"></i> <span class="opacity-75">+91 81398 59807</span></li>
+                        <li class="mb-3 d-flex"><i class="fas fa-map-marker-alt text-gold mt-1 me-3"></i> <span class="opacity-75">Arun P,<br> Animal Seva Shelter, Akambadam,<br>Nilambur, India - 679329</span></li>
+                        <li class="mb-3 d-flex"><i class="fas fa-phone text-gold mt-1 me-3"></i> <span class="opacity-75">+91 8089478082</span></li>
                         <li class="mb-3 d-flex"><i class="fas fa-envelope text-gold mt-1 me-3"></i> <span class="opacity-75">help@animalseva.in</span></li>
                     </ul>
                 </div>
